# mgeo-leo

./: README.md
seminars/2026-06-08-marimo-openeo/: .gitignore  README.md  demo-openeo.py  pyproject.toml
